--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ androidx-core = "1.16.0"
 androidx-espresso = "3.6.1"
 androidx-lifecycle = "2.9.1"
 androidx-testExt = "1.2.1"
-composeMultiplatform = "1.6.11"
+composeMultiplatform = "1.6.10"
 composeShimmer = "1.3.3"
 junit = "4.13.2"
 kotlin = "2.2.0"
@@ -20,6 +20,9 @@ core = "1.7.0"
 serialization = "1.7.3"
 navigation = "2.8.0-alpha10"
 landscapist = "2.4.0"
+
+# Store
+datastore = "1.1.1"
 
 # Koin
 koin = "4.0.0"
@@ -50,6 +53,10 @@ coil3 = { module = "com.github.skydoves:landscapist-coil3", version.ref = "lands
 kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlinStdlib" }
 androidx-runner = { group = "androidx.test", name = "runner", version.ref = "runner" }
 androidx-core = { group = "androidx.test", name = "core", version.ref = "core" }
+
+# Store
+datastore = { module = "androidx.datastore:datastore", version.ref = "datastore" }
+datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastore" }
 
 # Koin Dependencies
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
